chore: make pre-realese version

--- a/pinger-site/src/components/TableScrollArea.module.css
+++ b/pinger-site/src/components/TableScrollArea.module.css
@@ -3,16 +3,7 @@
   top: 0;
   background-color: var(--mantine-color-body);
   transition: box-shadow 150ms ease;
-
-  &::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    border-bottom: 1px solid
-      light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-3));
-  }
+  z-index: 1;
 }
 
 .scrolled {
